2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/services/config/ConfigService.cpp: on win32, use the APPDATA environment variable to get the Application Data path
	* src/components/ogre/ogreopcode/opcode/Makefile.am: include headers in dist
	* src/components/ogre/Makefile.am: removed old unused files

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* ember.conf: added setting for inverting the mouse
	* src/components/ogre/TerrainGenerator.cpp, src/components/ogre/environment/Sun.h: cleaned up the SigC headers
	* Makefile.am: include the ember script in the dist

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberPhysicalEntity.cpp, src/components/ogre/model/ModelDefinition.*, src/components/ogre/model/XMLModelDefinitionSerializer.*: added ability to transform a mesh

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberOgre.*: changed how the request-for-quit functionality works. If a request for quit signal is emitted and not handled, the application will quit instantly. 

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/EmberEntity.cpp: cleaned up logging

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/AvatarCamera.*: added option for inverting the mouse in the y axis, use the ember.conf setting input:invertcamera. Or use the run time console command /set_value input invertcamera true

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>

	* src/components/ogre/GUIManager.*: added a /toggleinputmode console command
	* src/components/ogre/widgets/Help.*: after getting connected to the world, show a small help blurb about how the input system works
	* src/components/ogre/widgets/StatusIconBar.* clicking the movement icon will now switch movement modes
	* src/components/ogre/widgets/Quit.*: make sure that soft quit requests are marked as handled

2005-10-10  Erik Hjortsberg  <erik@katastrof.nu>
